fix findAndModify when sort is used and _id in query SERVER-2530